--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <h1 class="section-title">Dự án</h1>
         <div class="project">
           <div class="project_in">
-            <a href="https://laptopbmt.github.io/digital-cv/" target="_blank">
+            <a href="digital-cv.html" target="_blank">
               <img src="./images/project_1.png" alt="project_1" width="350px" />
               <div class="padding">CV Cá Nhân</div>
               <div class="info_project">
@@ -259,7 +259,7 @@
             >
           </div>
           <div class="project_in">
-            <a href="https://laptopbmt.github.io/digital-cv/" target="_blank">
+            <a href="digital-cv.html" target="_blank">
               <img src="./images/project_2.png" alt="project_2" width="350px" />
               <div class="padding">CV Cá Nhân</div>
               <div class="info_project">
@@ -291,7 +291,7 @@
           </div>
           <div class="project_in">
             <a
-              href="https://laptopbmt.github.io/digital-cv/"
+              href="digital-cv.html"
               target="_blank"
               rel="noopener noreferrer"
             >
