--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/tablet.css" />
     <link rel="stylesheet" href="./css/mobile.css" />
     <link rel="stylesheet" href="./css/font.css" />
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Assignment 03</title>
   </head>
   <body>
@@ -78,8 +78,8 @@
             </div>
             <div><i class="ic-toolbox"></i></div>
           </div>
-          <div class="row">
-            <p><strong>Full Stack Developer - Công ty Y</strong></p>
+          <div class="timeline-1">
+            <p class="row-1"><strong>Full Stack Developer - Công ty Y</strong></p>
             <p>
               - Xây dựng phát triển Website dựa trên thiết kế và yêu cầu đã có.
             </p>
@@ -92,8 +92,8 @@
               Web Server
             </p>
           </div>
-          <div class="row3">
-            <p><strong>Web Designer - Công ty X</strong></p>
+          <div class="timeline-1">
+            <p class="row-1"><strong>Web Designer - Công ty X</strong></p>
             <p>06/2021 - 04/2022</p>
             <p>- Thiết kế Website dựa trên yêu cầu của khách hàng.</p>
             <p>Sử dụng các công cụ: Figma, Canva, PTS</p>
@@ -106,8 +106,8 @@
             </div>
             <div><i class="ic-pencil"></i></div>
           </div>
-          <div class="row">
-            <p><strong>FUNiX</strong></p>
+          <div class="timeline-1">
+            <p class="row-1"><strong>FUNiX</strong></p>
             <div class="text_timeline_date">
               05/2022 -
               <p><i class="text_timeline">Hiện Tại</i></p>
@@ -115,8 +115,8 @@
             <p>- Tốt nghiệp chứng chỉ doanh nghiệp nhánh Fullstack.</p>
             <p>- GPA: 9/10</p>
           </div>
-          <div class="row2">
-            <p><strong>Cử nhân - ĐH FPT</strong></p>
+          <div class="timeline-1">
+            <p class="row-1"><strong>Cử nhân - ĐH FPT</strong></p>
             <p>08/2016 - 07/2019</p>
             <p>- Chuyên ngành: Kỹ thuật phần mềm.</p>
             <p>- GPA: 3.2 / 4</p>
@@ -129,15 +129,15 @@
             </div>
             <div><i class="ic-toolbox"></i></div>
           </div>
-          <div class="row">
-            <p><strong>Edu Hackathon 2019</strong></p>
+          <div class="timeline-1">
+            <p class="row-1"><strong>Edu Hackathon 2019</strong></p>
             <p>03/2019 - 05/2019</p>
             <p>Giải 3 bảng A</p>
             <p>Đề tài: Trang web về phân loại rác thải.</p>
             <p>08/2016 - 08/2017</p>
           </div>
-          <div class="row2">
-            <p><strong>Câu lạc bộ Z</strong></p>
+          <div class="timeline-1">
+            <p class="row-1"><strong>Câu lạc bộ Z</strong></p>
             <p>Trưởng ban chuyên môn</p>
           </div>
         </div>
@@ -148,7 +148,7 @@
             </div>
             <div><i class="ic-telescope"></i></div>
           </div>
-          <div class="icon_hobbies" style="padding-top: 30px">
+          <div class="icon_hobbie" style="padding-top: 30px">
             <div>
               <i class="ic-megaphone"></i>
               <p>Âm Nhạc</p>
@@ -324,9 +324,9 @@
     </section>
     <section id="footer" class="bg-grey">
       <div class="container footer">
-        <div><i class="icon-facebook-circled"></i><a href="#">Facebook</a></div>
-        <div><i class="icon-linkedin"></i><a href="#">Linkedin</a></div>
-        <div><i class="icon-github-circled"></i><a href="#">Github</a></div>
+        <div class="footer-effect"><i class="icon-facebook-circled"></i><a href="#">Facebook</a></div>
+        <div class="footer-effect"><i class="icon-linkedin"></i><a href="#">Linkedin</a></div>
+        <div class="footer-effect"><i class="icon-github-circled"></i><a href="#">Github</a></div>
       </div>
     </section>
   </body>
